# osmium

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: frame_buffer.rs  lib.rs  main.rs  testable.rs
src/: lib.rs  main.rs  mmu.rs  runtime.rs  uart.rs  uart_ns16550.rs
src/asm/: boot.S  mem.S  trap.S
src/lds/: virt.lds
src/mmu/: kmem.rs
